# tf-keras-simple-baselines-keypoint-detection

./: README.md  demo.py  eval.py  multi_person_demo.py  train.py
common/: data_utils.py  utils.py
common/backbones/: ghostnet.py  mobilenet_v3.py  peleenet.py
inference/: README.md
inference/MNN/: CMakeLists.txt  simplebaselineKeypoint.cpp
inference/tflite/: CMakeLists.txt  simplebaselineKeypoint.cpp  simplebaselineKeypoint.h
simple_baselines/: callbacks.py  data.py  layers.py  model.py
tools/evaluation/: convkernel_check.py  featuremap_check.py  model_statistics.py  mpii_eval.py  validate_simple_baselines.py  validate_simple_baselines_multiperson.py
tools/misc/: augment_test.py
tools/model_converter/: keras_to_onnx.py  onnx_edit.py  post_train_quant_convert.py  tensorflow_to_rknn.py
